fixing responsiviness on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,11 @@ html {
   justify-content: center;
 }
 
+/* margin */
+.div {
+  margin: 1px 0;
+}
+
 /* Headings */
 h1 {
   font-family: 'Jacquard 12', sans-serif;
@@ -134,4 +139,90 @@ img {
 /* Apply animation on hover */
 img:hover {
   animation: wobble 0.5s ease-in-out infinite;
+}
+
+@media (max-width: 400px) {
+  .header {
+    height: auto;
+    padding: 40px;
+  }
+
+  #header-title {
+    font-size: 2rem;
+    max-width: 100%;
+  }
+
+  .main {
+    flex-direction: column; /* Stack sections vertically */
+    align-items: center;
+  }
+
+  .left,
+  .right {
+    width: 100%; /* Full width */
+    padding: 20px;
+  }
+
+  .spacer {
+    display: none;
+  }
+
+  img {
+    max-width: 90%;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  a {
+    font-size: 18px;
+  }
+
+  .spacer {
+    width: 4%; /* Adjust as needed */
+    background: transparent;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    height: auto;
+    padding: 40px;
+  }
+
+  #header-title {
+    font-size: 2rem;
+    max-width: 100%;
+  }
+
+  .main {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .left,
+  .right {
+    width: 80%;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  img {
+    max-width: 80%;
+  }
+
+  a {
+    font-size: 20px;
+  }
 }
